<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delay_est</name>
  <version>1.0.0</version>
  <description>
    Experimental OWD and RTT estimator for ROS2-based Networked Control Systems (NCS) on Wi-Fi 6.
    Developed for Bachelor Thesis at University of Padova.
  </description>
  <maintainer email="nnicolo.martini@gmail.com">Nicolò Martini</maintainer>
  <author email="nicolo.martini.5@studenti.unipd.it">Nicolò Martini</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
